<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/title_profile" />

    <!-- Админ-панель - будет скрыта/показана динамически -->
    <item
        android:id="@+id/navigation_admin"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_admin"
        android:visible="false" />

</menu>